# ml-dengue-predict

./: .gitignore  LICENCE.md  Makefile  README.md  pyproject.toml
fetchinfodata/: fetchinfodata.py
fetchinfodenguedata/: fetchinfodenguedata.py  settings.py
notebooks/: Explore_data.ipynb  ML_Dengue_Predict_FINAL.ipynb  NB_FINAL.ipynb  Projeto_ML_Dengue_Predict.ipynb
notebooks/Previsao_de_epidemias_de_dengue_utilizando_modelos_de_machine_learning/: NB_FINAL.md
notebooks/modelos/: prepare_UFSC_data_20230915_SL.ipynb
slides/: PRESENTATION_ML_DENGUE_PROJECT.ppt
